--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.8.0",
     "@ionic/pwa-elements": "^3.2.2",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "ionicons": "^7.2.1",
     "rxjs": "~7.8.0",
     "swiper": "^11.0.7",
