--- a/angular.json
+++ b/angular.json
@@ -8,7 +8,8 @@
       "schematics": {
         "@ionic/angular-toolkit:page": {
           "styleext": "scss",
-          "standalone": true
+          "standalone": true,
+          "spec":false
         }
       },
       "root": "",
