--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ionic/storage-angular": "^4.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "date-fns": "^3.6.0",
     "ionicons": "^7.2.1",
     "rxjs": "~7.8.0",
     "swiper": "^11.0.7",
