--- a/angular.json
+++ b/angular.json
@@ -131,10 +131,12 @@
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
-      "styleext": "scss"
+      "styleext": "scss",
+      "spec":false
     },
     "@ionic/angular-toolkit:page": {
-      "styleext": "scss"
+      "styleext": "scss",
+      "spec":false
     },
     "@angular-eslint/schematics:application": {
       "setParserOptionsProject": true
